<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PicPuzzle</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="back">Back</string>
    <string name="editImage">Edit Image</string>
    <string name="imagePreviewDesc">Image Preview Description </string>
    
    <string name="puzzleTypeText">Puzzle type</string>
    <string name="addDecorationsText">Add decorations</string>
    <string name="rubikCubePuzzle">Rubik cube</string>
    <string name="jigSawPuzzle">Jig Saw</string>
</resources>
