<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"       
	    android:layout_margin="25sp"
        android:orientation="vertical"
        android:background="@drawable/round_corners" >

        <ImageView
            android:id="@+id/imageviewPreview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"            
            android:contentDescription="@string/imagePreviewDesc"/>
        
    </LinearLayout>    
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/layoutBottomButtons"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#f1f1f1">       
        
        <Button
            android:layout_width="0dip"
            android:text="@string/back"
            android:layout_height="wrap_content" 
            android:layout_weight=".50"  />
        
        <Button 
            android:layout_width="0dip"
            android:text="@string/editImage"
            android:layout_height="wrap_content" 
            android:layout_weight=".50"/>
    </LinearLayout>


</RelativeLayout>
