<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true" 
	    android:id="@+id/button_top_sect" > 
	       
        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/puzzleType"
            android:layout_weight="0.5"
            android:text="@string/puzzleTypeText" />
                    
        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:id="@+id/addDecorations" 
            android:text="@string/addDecorationsText" 
            android:layout_weight="0.5"/>         
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_below="@id/button_top_sect"
        android:layout_margin="5sp"
        android:orientation="horizontal" >

        <ImageView
	        android:id="@+id/imageViewEdit"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:contentDescription="@string/imagePreviewDesc" />
    
	</LinearLayout>
    
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true" 
	    android:id="@+id/button_bottom_sect"
	    android:orientation="horizontal" > 
	    
        </LinearLayout>
</RelativeLayout>
